[gd_scene load_steps=14 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Terrain.tscn" type="PackedScene" id=3]
[ext_resource path="res://Target/Target.tscn" type="PackedScene" id=4]
[ext_resource path="res://Player/RayCast.gd" type="Script" id=5]
[ext_resource path="res://NPC/NPC.tscn" type="PackedScene" id=6]
[ext_resource path="res://NPC/NPC.gd" type="Script" id=7]
[ext_resource path="res://UI/Dialogue.gd" type="Script" id=8]
[ext_resource path="res://UI/UI.gd" type="Script" id=9]
[ext_resource path="res://Drone/Drone.tscn" type="PackedScene" id=10]

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 0, 0.203922, 1, 1 )
emission_enabled = true
emission = Color( 0.0196078, 0.27451, 0.94902, 1 )
emission_energy = 3.0
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="SphereMesh" id=2]
material = SubResource( 1 )
radius = 0.5
height = 1.0

[sub_resource type="SphereShape" id=3]
radius = 5.15594

[node name="Game" type="Spatial"]

[node name="Player" parent="." instance=ExtResource( 2 )]
transform = Transform( -0.766044, 0, -0.642788, 0, 1, 0, 0.642788, 0, -0.766044, 41.2165, 0.384771, 13.342 )
collision_layer = 2
collision_mask = 7
script = ExtResource( 1 )

[node name="Pivot" type="Position3D" parent="Player"]

[node name="Camera" type="Camera" parent="Player/Pivot"]
transform = Transform( -1, 8.4334e-08, -3.14739e-07, 0, 0.965926, 0.258819, 3.25841e-07, 0.258819, -0.965926, 0, 5, -8 )

[node name="RayCast" type="RayCast" parent="Player/Pivot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0 )
enabled = true
cast_to = Vector3( 0, -1, 100 )
script = ExtResource( 5 )

[node name="Reticle" type="Position3D" parent="Player/Pivot/RayCast"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 50 )

[node name="MeshInstance" type="MeshInstance" parent="Player/Pivot/RayCast/Reticle"]
mesh = SubResource( 2 )
material/0 = null

[node name="lowpoly_scene" parent="." instance=ExtResource( 3 )]
transform = Transform( 3, 0, 0, 0, 3, 0, 0, 0, 3, 0, 0, 0 )

[node name="Target_Container" type="Spatial" parent="."]
visible = false

[node name="Target" parent="Target_Container" instance=ExtResource( 4 )]
transform = Transform( 0.939693, 0, 0.34202, 0, 1, 0, -0.34202, 0, 0.939693, -33.5111, 4, 8.74759 )

[node name="Target2" parent="Target_Container" instance=ExtResource( 4 )]
transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, 6.4017, 3.37056, -4.79771 )

[node name="Target3" parent="Target_Container" instance=ExtResource( 4 )]
transform = Transform( 0.939693, 0, -0.34202, 0, 1, 0, 0.34202, 0, 0.939693, -46.1013, 3.69977, -26.4511 )

[node name="Target5" parent="Target_Container" instance=ExtResource( 4 )]
transform = Transform( 0.5, 0, -0.866025, 0, 1, 0, 0.866025, 0, 0.5, -34.1717, 5.79154, -59.1225 )

[node name="Target6" parent="Target_Container" instance=ExtResource( 4 )]
transform = Transform( -0.5, 0, -0.866025, 0, 1, 0, 0.866025, 0, -0.5, 18.259, 7.2447, -43.9276 )

[node name="Target4" parent="Target_Container" instance=ExtResource( 4 )]
transform = Transform( 0.766044, 0, -0.642788, 0, 1, 0, 0.642788, 0, 0.766044, -68.4648, 10.0178, -58.4939 )

[node name="Drone_Container" type="Spatial" parent="."]

[node name="Drone" parent="Drone_Container" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 20, 100 )

[node name="NPC" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 42.3635, 0.0977631, 0 )
script = ExtResource( 7 )

[node name="Area" type="Area" parent="NPC"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="NPC/Area"]
shape = SubResource( 3 )

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource( 9 )

[node name="Damage" type="ColorRect" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="UI"]
anchor_right = 1.0
margin_bottom = 30.0
color = Color( 0, 0, 0, 0.392157 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="UI"]
margin_left = 10.0
margin_right = 510.0
margin_bottom = 30.0
text = "Score:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Time" type="Label" parent="UI"]
margin_left = 512.0
margin_right = 1014.0
margin_bottom = 30.0
text = "Time: 00:00"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="UI"]

[node name="Dialogue" type="Control" parent="UI"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="UI/Dialogue"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -30.0
color = Color( 0, 0, 0, 0.392157 )

[node name="Text" type="RichTextLabel" parent="UI/Dialogue"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -20.0
margin_bottom = 10.0
bbcode_enabled = true
[connection signal="body_entered" from="NPC/Area" to="NPC" method="_on_Area_body_entered"]
[connection signal="body_exited" from="NPC/Area" to="NPC" method="_on_Area_body_exited"]
[connection signal="timeout" from="UI/Timer" to="UI" method="_on_Timer_timeout"]
